# medical-imaging-lakehouse

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow_home/dags/: medical_imaging_pipeline.py
api/: Dockerfile  main.py  model_loader.py  requirements.txt
dashboard/: app.py  data_loader.py
docs/: data_dictionary,md  model_card.md
etl/bronze/: audit.py  consumer.py  metadata_ingest.py  producer.py
etl/gold/: analytics_summary.py  model_ready.py
etl/silver/: dicom_metadata_ingest.py  dicom_parser.py  dq_checks.py  explore_dicom.py  image_preprocess.py
notebooks/: model_training.ipynb
tests/: test_api.py  test_dicom_parser.py  test_dq_checks.py
