[project]
name = "medical-imaging-lakehouse"
version = "0.1.0"
description = "End-to-end medallion lakehouse for medical imaging"
authors = [
    {name = "anjanareddy7"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydicom (>=3.0.2,<4.0.0)",
    "opencv-python-headless (>=4.13.0.92,<5.0.0.0)",
    "pandas (<3)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "boto3 (>=1.43.29,<2.0.0)",
    "mlflow (>=3.13.0,<4.0.0)",
    "timm (>=1.0.27,<2.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "pytest (>=9.1.0,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyspark (==4.1.1)",
    "confluent-kafka (>=2.14.2,<3.0.0)",
    "delta-spark (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
